--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 
 /* banner section starts here */
 
+
+
 .banner-container{
     max-width: 1440px;
     height: 652px;
@@ -18,21 +20,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 26px;
+    
     text-align: center;
 }
 .banner-img{
     max-width: 240.28px;
     height: 240px;
+    margin-top: 26px;
     margin-bottom: 10px;
 }
 .banner-content h1{
     color: rgb(13, 19, 33);
     font-size: 48px;
     font-weight: 800;
-    height: 78px;
-    width: 998px;
-
+    margin-bottom: 15px;
 }
 .banner-content p{
     color: rgb(13, 19, 33);
@@ -55,5 +56,100 @@
     margin-bottom: 44px;
 
 }
-/* banner section ends here */
+/* Why Web Development section starts here */
 
+.development{
+    max-width: 1140px;
+    height: 1393px;
+    width: 90%;
+    margin: 0 auto;
+    font-family: "Azeret Mono", monospace;
+    margin-top: 74px;
+    margin-bottom: 90px;
+    padding: 80px 97px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+}
+.development p{
+    max-width: 852px;
+    height: 52px;
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.7;
+    
+}
+.web-header{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+}
+.web-header h1{
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    width: 852px;
+    height: 37px;
+}
+
+.web-section-1{
+    height: 280px;
+    padding: 48px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 32px;
+    border-radius: 16px;
+    background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+.web-content{
+    margin: 10.5px 98px 10.5px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    align-items: start;
+    padding: 0px;
+    width: 477px;
+    height: 219px;
+
+}
+.web-section-1 h2{
+    width: 390px;
+    height: 72px;
+    color: rgba(13, 19, 33, 0.7);
+    font-size: 24px;
+    font-weight: 700;
+}
+.web-section-1 img{
+    width: 259.56px;
+    height: 217.01px;
+    margin-right: 0px;
+
+} 
+
+/* ---shared-style---- */
+.btn-type{
+    width: 131px;
+    height: 23px;
+    text-align: center;
+    margin-top: 29px;
+    border: 1px solid rgba(61, 66, 77, 0.37);
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
+    padding: 12px 20px 12px 20px;
+}
+
+
+/* My inspiration section starts here */
+.motivation{
+    max-width: 1140px;
+    height: 775px;
+    border: 3px solid red;
+    width: 90%;
+    margin: 0 auto;
+}
