--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
 }
-.development p{
+.development .motivation p{
     max-width: 852px;
     height: 52px;
     color: rgb(13, 19, 33);
@@ -103,7 +103,12 @@
     align-items: center;
     margin-bottom: 32px;
     border-radius: 16px;
+}
+.web-1{
     background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+.web-2{
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
 }
 .web-content{
     margin: 10.5px 98px 10.5px 0px;
@@ -147,9 +152,51 @@
 
 /* My inspiration section starts here */
 .motivation{
-    max-width: 1140px;
+    max-width: 1330px;
     height: 775px;
-    border: 3px solid red;
     width: 90%;
     margin: 0 auto;
+    margin-bottom: 151px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    
+}
+.inspiration-text{
+    margin-top:  0px;
+    margin-bottom: 20px;
+    font-family: "Azeret Mono", monospace;
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.inspiration-text h3{
+    width: 400px;
+    height: 37px;
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 2px;
+    margin-top: 0px;
+}
+.motivation iframe{
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    width: 1140px;
+    height: 614px;
+    border-radius: 16px;
+    align-items: center;
+    margin-bottom: 0px;
+   
+    
+}
+.inspiration-video{
+    padding: 20px;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+        
 }
