--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
 }
-.development .motivation p{
+.development .motivation .support p{
     max-width: 852px;
     height: 52px;
     color: rgb(13, 19, 33);
@@ -153,16 +153,16 @@
 /* My inspiration section starts here */
 .motivation{
     max-width: 1330px;
-    height: 775px;
+    height: 790px;
     width: 90%;
     margin: 0 auto;
-    margin-bottom: 151px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0;
-    
+    border: 3px solid red;
 }
 .inspiration-text{
     margin-top:  0px;
@@ -198,5 +198,97 @@
     padding: 20px;
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
-        
+}
+
+.my-target{
+    max-width: 1330px;
+    height: 490px;
+    border: 3px solid red;
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+}
+.target-skills{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    gap: 34px;
+}
+.skill{
+    max-width: 410px;
+    height: 300px;
+    border-radius: 16px;
+    background: rgba(255, 76, 30, 0.05);
+    
+}
+
+
+
+
+
+
+
+
+
+/* support section starts here */
+.support{
+    max-width: 1330px;
+    height: 313px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.267),rgba(0, 0, 0, 0.342),rgba(0, 0, 0, 0.2)),url('../assets/handshake.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 3px solid red;
+    font-family: "Azeret Mono", monospace;
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0px 24px 0px;
+    border-radius: 16px;
+}
+
+.support p{
+    color:  rgb(255, 255, 255);
+    margin-bottom: 40px;
+    margin-top: 0px;
+}
+.support input[type="text"]{
+    width: 538px;
+    height: 47px;
+    border: none;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    padding-left: 20px;
+    font-family: "Azeret Mono", monospace;
+}
+
+.support h2{
+    width: 292px;
+    height: 36px;
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight:700px;
+}
+.input-element{
+    margin-bottom: 35px;
+}
+ .support input[type="submit"]{  
+    width: 120px;
+    height: 51.5px;
+    border-radius: 8px;
+    background-color: rgb(255, 255, 255);
+}.btn-primary{
+    color: rgb(13, 19, 33);
+    font-size: 18px;
+    font-weight: 600;
+    font-family: "Azeret Mono", monospace;
 }
