--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
     margin: 0 auto;
     font-family: "Azeret Mono", monospace;
     margin-top: 131px;
-    background-image: url('../assets/Hero-bg.png');
+    background-image: linear-gradient(180.00deg, rgba(0, 255, 234, 0.055),rgba(255, 0, 179, 0.021) 100%),url('../assets/Hero-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -49,12 +49,19 @@
     font-weight: 600;
     border-radius: 8px;
     background: rgb(13, 19, 33);
-    width: 208px;
-    height: 66px;
-    padding: 21px 24px 21px 24px;
-    margin-bottom: 44px;
-
+    width: 209px;
+    height: 50px;
 }
+.banner-content a{
+    display: inline-block;
+    text-decoration: none; 
+    text-align: center;
+    padding: 10px 20px;
+}
+.banner-btn:hover {
+    background-color: rgba(107, 76, 99, 0.623);
+}
+
 /* Why Web Development section starts here */
 
 .development{
@@ -250,6 +257,18 @@
     background: rgba(255, 75, 30, 0.308);
     
 }
+/* ---skill cards coloring item starts here----*/
+.skill-item-1{
+    background-color: rgba(255, 76, 30, 0.05);
+}
+.skill-item-2{
+    background-color: rgba(0, 76, 232, 0.05);
+}
+.skill-item-3{
+    background-color: rgba(255, 223, 0, 0.05);
+}
+/*---skill cards coloring item ends here----*/
+
 .skill h5{
     max-width: 284px;
     height: 36px;
