--- a/styles/style.css
+++ b/styles/style.css
@@ -27,8 +27,7 @@
 .banner-img{
     max-width: 240.28px;
     height: 240px;
-    margin-top: 26px;
-    margin-bottom: 10px;
+    margin: 26px auto 10px;
 }
 .banner-content h1{
     color: rgb(13, 19, 33);
